--- a/bankapp/bankapp-ds.yml
+++ b/bankapp/bankapp-ds.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: bankapp
-        image: shubhamit750/bankapp:latest
+        image: shubhamit750/bankapp:v3
         ports:
         - containerPort: 8080
         env:
